# sp_score

./: 1to30py.sh  1to30sh.sh  README.md  README.rst  cmd  loop.sh  pyproject.toml  sascore_6pt4million_sfhpmonos_fwd.sh  script_compute.sh  script_memory.sh
completed_sh/: 0_10_script_compute.sh  0_11_script_compute.sh  0_12_script_compute.sh  0_13_script_compute.sh  0_14_script_compute.sh  0_15_script_compute.sh  0_16_script_compute.sh  0_1_script_compute.sh  0_2_script_compute.sh  0_3_script_compute.sh  0_4_script_compute.sh  0_5_script_compute.sh  0_7_script_compute.sh  0_8_script_compute.sh  0_9_script_compute.sh  10_ether_script_compute.sh  11_ether_script_compute.sh  12_ether_script_compute.sh  13_ether_script_compute.sh  14_ether_script_compute.sh  15_ether_script_compute.sh  16_ether_script_compute.sh  17_ether_script_compute.sh  18_ether_script_compute.sh  19_ether_script_compute.sh  1_10_script_compute.sh  1_11_script_compute.sh  1_12_script_compute.sh  1_13_script_compute.sh  1_14_script_compute.sh  1_15_script_compute.sh  1_16_script_compute.sh  1_1_script_compute.sh  1_2_script_compute.sh  1_3_script_compute.sh  1_4_script_compute.sh  1_5_script_compute.sh  1_6_script_compute.sh  1_7_script_compute.sh  1_8_script_compute.sh  (+27 more)
src/data/: ps_known.csv
src/data/fingerprint/: PN_and_FPs.csv  acidchlorides_and_FPs.csv  acids_and_FPs.csv  alcohols_and_FPs.csv  aldehydes_and_FPs.csv  (+13 more)
src/sp_score/: fragment_group.py  generate_fragment_FP_and_pdf.py  generate_graph.py  known_graphs.py  read_data.py  sp_score.py
src/utils/: sascore.py
tests/: test_sascore.py
(+50 files in other folders)
